--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "color": "^5.0.0",
     "colors": "^1.4.0",
     "mongodb": "^6.15.0"
   }
